--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,6 +15,6 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build . --file docker/Dockerfile linux/x86_64 -t angio docker/
+      run: docker build . --file docker/Dockerfile -t angio docker/
     - name: Run a short test
       run: docker run -it -v $(pwd):/code angio /bin/bash run.sh 001
