--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Angio Project
 description: Developing a 3D phase-field model for tumor angiogenesis
 google_analytics: 
 show_downloads: true
-theme: jekyll-theme-hacker
+theme: minimal-mistakes-jekyll
 
 gems:
   - jekyll-mentions
