fix typo in _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Angio Project
 description: Developing a 3D phase-field model for tumor angiogenesis
 google_analytics: 
 show_downloads: true 
-remote_theme: "mmistakes/minimal-mistakes@4.24.0
+remote_theme: "mmistakes/minimal-mistakes@4.24.0"
 
 gems:
   - Gemfile
