--- a/_config.yml
+++ b/_config.yml
@@ -4,5 +4,8 @@ google_analytics:
 show_downloads: true 
 remote_theme: "mmistakes/minimal-mistakes@4.24.0"
 
+plugins:
+  - jekyll-include-cache
+  
 gems:
   - plugins
